# portable-ai-dev-kit

./: .gitattributes  .gitignore  HANDOFF.md  LICENSE  Login.cmd  README.md  README.zh-CN.md  Setup.cmd  Start.cmd  TESTS-WINDOWS-ONLY.md  fix_locales.py  index.html  package-lock.json  package.json
config/: app-settings.json  local.ps1.example  marketplace.json  package-sources.json  tool-manifest.json
docs/: architecture.md  publishing-checklist.md
plans/: 001-npm-staging-atomic-install.md  003-timeout-progress-ux.md  005-drive-speed-diagnostics.md  README.md
scripts/: add-ai-tool-template.ps1  ai-tool.ps1  bootstrap.ps1  health-check.ps1  install-tools.ps1  login-menu.ps1  portable-kit.psm1  setup.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  portable.rs
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-CN.json
tools/: README.md
tools/codex/: codex-msys2.cmd  codex-run.cmd  codex.cmd  codex.ps1  package-lock.json  package.json
tools/demoai/: demoai.cmd  demoai.ps1
tools/gemini/: gemini-msys2.cmd  gemini-run.cmd  gemini.cmd  gemini.ps1  package.json
tools/iflow/: iflow-msys2.cmd  iflow-run.cmd  iflow.cmd  iflow.ps1  package-lock.json  package.json  portable-entry.mjs
tools/msys2/: msys2-ai.cmd  msys2.cmd  msys2.ps1
tools/openclaude/: openclaude.cmd  package.json
