[package]
name = "portable-ai-dev-kit"
version = "0.1.0"
description = "Portable AI development workstation for Windows x64"
authors = ["Portable AI Dev Kit"]
edition = "2021"

[lib]
name = "portable_ai_dev_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
tauri = { version = "2.9.2", features = [] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
